@@ -58,6 +58,7 @@
 - Fix: [#13961] Animation for Guests sliding down Spiral Slide is missing on close zoom levels.
 - Fix: [#14012] 'Finish 5 roller coasters' goal is listed incorrectly in scenario selector.
 - Fix: [#14095] Holding down [-][+] buttons does not decrease/increase number of circuits.
+- Fix: [#14247] Scenarios from RCT1 allow hiring too many staff.
 - Improved: [#6022] Allow up to 128 ride objects to be selected in track designer.
 - Improved: [#12917] Changed peep movement so that they stay more spread out over the full width of single tile paths.
 - Improved: [#13386] A GUI error message is now displayed if the language files are missing.
